<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".views.activity.DetailActivity">

    <ImageView
        android:id="@+id/backgroundDetailFilm"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:alpha="0.6"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@color/colorWhiteOp70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_round_back_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@color/colorWhiteOp70"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundDetailFilm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundDetailFilm"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/ratingDetailFilm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_rate"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
        app:layout_constraintStart_toStartOf="@+id/circleImageView"
        app:layout_constraintTop_toTopOf="@+id/circleImageView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardImageDetailFilm"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88">

        <ImageView
            android:id="@+id/imageDetailFilm"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@color/colorWhiteOp70" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/titleDetailFilm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:text="@string/dot"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cardImageDetailFilm"
        app:layout_constraintTop_toBottomOf="@+id/backgroundDetailFilm" />

    <TextView
        android:id="@+id/releaseDetailFilm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/dot"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/cardImageDetailFilm"
        app:layout_constraintTop_toBottomOf="@+id/titleDetailFilm" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:text="@string/overview"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releaseDetailFilm" />

    <TextView
        android:id="@+id/overviewDetailFilm"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="30dp"
        android:text="@string/dot"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview" />
</androidx.constraintlayout.widget.ConstraintLayout>